fix: chef info font spacing

--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -765,11 +765,13 @@ h6 {
 }
 
 .chef-info p {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   font-weight: 200;
   text-align: justify;
   margin: 0 4rem;
   max-width: 33rem;
+  line-height: 1.2;
+  letter-spacing: 1.08px;
 }
 
 @media (max-width: 768px) {
